Fix menu on mobile devices

--- a/configs/conferences/32c3/main.less
+++ b/configs/conferences/32c3/main.less
@@ -79,6 +79,12 @@ h1, h2, body.overview .room a.title, body.overview .panel-primary a, .navbar-bra
 	text-indent: -9999em;
 }
 
+@media (max-width: 480px) {
+  .banner {
+    margin-top: 60px;
+  }
+}
+
 .player-wrap {
 	background-color: @darker-grey;
 }
@@ -90,6 +96,7 @@ h1, h2, body.overview .room a.title, body.overview .panel-primary a, .navbar-bra
 nav .navbar-form {
   margin-top: 0;
   margin-bottom: 0;
+  padding: 0;
 }
 
 nav .button-wrapper > .btn {
